# text-editor

./: Cargo.toml  README.md  example_doc copy.json  example_doc.json
crates/convert/: Cargo.toml
crates/convert/src/: pdf.rs
crates/text/: Cargo.toml
crates/text/src/: attributes.rs  layouting.rs  line_buffer.rs  shaping.rs  swash_cache.rs
src/: document.rs  main.rs
text/: Cargo.toml
text/src/: attributes.rs  color.rs  font_system.rs  glyph_cache.rs  lib.rs  swash_cache.rs
